Sidebars z-index fix

--- a/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
+++ b/tomikuvzpevnik/static/tomikuvzpevnik/sidebar.css
@@ -5,7 +5,7 @@
     width: 200px;
     top: 0px;
     left: 0px;
-    z-index: 20;
+    z-index: 100;
     left: -200px;
     transition: 0.3s;
 }
@@ -33,7 +33,7 @@
     left:0;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 50;
     background:rgba(0,0,0,0.05);
     transition: 0.5s;
 }
@@ -60,7 +60,7 @@
     width: 400px;
     top: 0px;
     right: -400px;
-    z-index: 20;
+    z-index: 100;
     transition: 0.3s;
 }
 
